--- a/compose.yml
+++ b/compose.yml
@@ -31,6 +31,7 @@ services:
     hostname: backend
     restart: always
     command: tail -f /dev/null
+    working_dir: /app
     volumes:
       - ./backend:/app
     ports:
